# save-all-commands

./: Cargo.toml  LICENSE  README.md  commands.toml.example  initial_instructions.md
docs/: COMMANDS.md  COMMANDS_CN.md  LESSON_LEARNED.md  LESSON_LEARNED_CN.md  PROGRESS.md  PROGRESS_CN.md  README_CN.md  STRUCTURE.md  STRUCTURE_CN.md  TUTORIAL.md  TUTORIAL_CN.md
src/: cli.rs  config.rs  lib.rs  main.rs  search.rs  shell.rs  store.rs  sync.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: test_cli.rs  test_config.rs  test_search.rs  test_store.rs  test_sync.rs  test_validation.rs
